# haskellbook

./: .gitignore  LICENSE  README.md  default.nix  gimmeperson.hs  haskellbook.cabal  hie.yaml  learn.cabal  package.yaml  stack.yaml
app/: Main.hs  e10.hs  e11.hs  e12.hs  e9.hs  exercises_ch1to5.hs  exercises_ch6.hs  exercises_ch7.hs  exercises_ch8.hs  palindrome.hs  phone.hs  reverse.hs  tallfilter.hs  temp.hs
src/: Fool.hs  Lib.hs  MaybeAnotherMonoid.hs  MonoidQuickCheckHelpers.hs  Optional.hs  TestingQuickChecksPatience.hs  badmonad.hs  e10.hs  e14.hs  e15.hs  e17.hs  e6.hs  e8.hs  fool.hs  gimmeperson.hs  phone.hs  reverse.hs  temp.hs
src/ch11/: e11.hs
src/ch13/: hangman.url
src/ch15/: E15.hs  MonoidSemigroupHelpers.hs  TestingQuickChecksPatience.hs
src/ch16/: e16.hs
src/ch18/: E18.hs  e18.hs  monad_vs_applicative.hs
src/ch19/: and_now_for_something_different.hs  docker-compose.yaml  hgrev.hs  lifting_over_io.hs  more_parsing.hs  opening_a_network_socket.hs  shawty.hs
src/ch1to5/: e1to5.hs  palindrome.hs
src/ch20/: Chapter20Exercises.hs  ChapterExercises.hs  LibraryFunctions.hs  e20.hs
src/ch21/: Chapter21Exercises.hs  ChapterExercises.hs
src/ch22/: AskReadingComprehensionReaderMonad.hs  Chapter22Exercises.hs  ChapterExercises.hs  ReadingComprehension.hs  WarmingUp.hs
src/ch23/: Chapter23Exercises.hs  ChapterExercises.hs  FizzbuzzDifferently.hs  RollYourOwn.hs  WriteStateForYourself.hs
src/ch24/: Chapter24Exercises.hs  ChapterExercises.hs  IP.hs  Log.hs  ParsingConfigurationFiles.hs  ParsingPractice.hs  SemVer.hs  TelefonNummer.hs  TryTry.hs  UnitOfSuccess.hs
src/ch25/: ChapterExercises.hs  EitherT.hs  Exercises.hs  GOTCHA.hs  HitCounter.hs  HypotheticalExercise.hs  IdentityT.hs  MaybeTIO.hs  StateT.hs  WrapItUp.hs  WriteTheCodeFixTheCode.hs  scotty.hs
src/ch26/: EitherT.hs  ExceptIO.hs  HitCounter.hs  MaybeT.hs  Morra.hs  ReaderT.hs  StateTIO.hs  scotty.hs
src/ch27/: CoreDump.hs  Evaluate.hs  MakeTheExpressionBottom.hs  StrictList.hs  WhatWillSprintOutput.hs  WillPrintingThisExpressionResultInBottom.hs
src/ch28/: BenchmarkPractice.hs  BoxedVector.hs  BoxedVector.prof  DifferenceList.hs  Queue.hs  Queue_benchmark_results.txt  UnboxedVector.hs  UnboxedVector.prof  bench.hs  heap.hp
src/ch29/: ConfigDirectories.hs  NestedIO.hs  anotherConfig.ini  someConfig.ini
src/ch30/: TheUnbearableImprecisionOfTrying.hs  WhySomeException.hs
src/ch31/: fingerd.url
src/ch7/: E7.hs
src/ch9/: e9.hs
src/cipher/: Cipher.hs  Unvigenere.hs  Vigenere.hs  VigenereApp.hs
src/e19/: templating_content_in_scotty.hs
src/other/: optparse.hs  parseip.hs  turtle.hs
src/temp/: parseip.hs
test/: CipherSpec.hs  FoolSpec.hs  IdempotenceSpec.hs  MultiplicationSpec.hs  Spec.hs  UsingQuickCheckSpec.hs  WordNumberSpec.hs
